load("@os_info//:os_info.bzl", "is_linux")
load(":pandoc.bzl", "pandoc")

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

pandoc(
    name = "pandoc",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "nixpkgs",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@io_tweag_rules_nixpkgs//nixpkgs/constraints:support_nix",
    ] + (["@platforms//os:linux"] if is_linux else ["@platforms//os:macos"]),
    toolchain = "@nixpkgs_pandoc//:pandoc_toolchain",
    toolchain_type = ":toolchain_type",
)

toolchain(
    name = "linux",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    toolchain = "@linux_pandoc//:pandoc_toolchain",
    toolchain_type = ":toolchain_type",
)

toolchain(
    name = "macos",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:macos",
    ],
    toolchain = "@macos_pandoc//:pandoc_toolchain",
    toolchain_type = ":toolchain_type",
)
