load("@rules_cc//cc:defs.bzl", "cc_library")

config_setting(
    name = "is_linux_aarch64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
)

filegroup(
    name = "include",
    srcs = glob(["include/*.h"]),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "zlib",
    srcs = select({
        "//:is_linux_aarch64": ["@nixpkgs_zlib_arm//:lib"],
        "//conditions:default": ["@nixpkgs_zlib_x86//:lib"],
    }),
    hdrs = [":include"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)
