load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_library",
)
load(
    "@rules_haskell//haskell/experimental:defs.bzl",
    "haskell_module",
)

haskell_library(
    name = "basic_modules",
    ghcopts = ["-XNoImplicitPrelude"],
    modules = [
        ":A",
        ":B",
        ":C",
    ],
    version = "0",
    visibility = ["//visibility:public"],
)

haskell_module(
    name = "A",
    src = "src/A.hs",
    ghcopts = ["-O"],
    src_strip_prefix = "src",
)

haskell_module(
    name = "B",
    src = "src/B.hs",
    src_strip_prefix = "src",
    deps = [":A"],
)

haskell_module(
    name = "C",
    src = "src/C.hs",
    src_strip_prefix = "src",
    deps = [":B"],
)
