load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_doc",
)

haskell_doc(
    name = "api-doc",
    deps = [
        "//cat_hs/lib/args",
        "//cat_hs/lib/cat",
    ],
)

filegroup(
    name = "starlark_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "//examples/cat_hs/exec/cat_hs:starlark_files",
        "//examples/cat_hs/lib/args:starlark_files",
        "//examples/cat_hs/lib/cat:starlark_files",
    ],
    visibility = ["//visibility:public"],
)
