load(
    "@io_tweag_rules_haskell//haskell:haskell.bzl",
    "haskell_cc_import",
    "haskell_library",
    "haskell_toolchain_library",
)

haskell_toolchain_library(name = "base")

haskell_toolchain_library(name = "ghc-prim")

cc_library(
    name = "memops",
    srcs = ["cbits/primitive-memops.c"],
    hdrs = ["cbits/primitive-memops.h"],
    deps = ["@ghc//:threaded-rts"],
)

haskell_library(
    name = "primitive",
    srcs = glob([
        "Data/**/*.hs",
        "Control/**/*.hs",
    ]),
    version = "0",
    visibility = ["//visibility:public"],
    deps = [
        ":base",
        ":ghc-prim",
        ":memops",
        "//transformers",
    ],
)
