load("@rules_cc//cc:defs.bzl", "cc_library")
load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_library",
    "haskell_toolchain_library",
)

haskell_toolchain_library(name = "base")

haskell_toolchain_library(name = "ghc-prim")

haskell_toolchain_library(name = "rts")

cc_library(
    name = "memops",
    srcs = ["cbits/primitive-memops.c"],
    hdrs = ["cbits/primitive-memops.h"],
    deps = [":rts"],
)

haskell_library(
    name = "primitive",
    srcs = glob([
        "Data/**/*.hs",
        "Control/**/*.hs",
    ]),
    version = "0",
    visibility = ["//visibility:public"],
    deps = [
        ":base",
        ":ghc-prim",
        ":memops",
        "//transformers",
    ],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
