load(
    "@io_tweag_rules_haskell//haskell:haskell.bzl",
    "cc_haskell_import",
    "haskell_import",
    "haskell_library",
)

haskell_import(name = "base")

haskell_library(
    name = "add-one-hs",
    srcs = ["One.hs"],
    deps = [":base"],
)

cc_haskell_import(
    name = "add-one-so",
    dep = ":add-one-hs",
)

cc_test(
    name = "add-one",
    srcs = [
        "main.c",
        ":add-one-so",
    ],
    visibility = ["//visibility:public"],
    deps = ["@ghc//:threaded-rts"],
)
