load(
    "@io_tweag_rules_haskell//haskell:haskell.bzl",
    "haskell_cc_import",
    "haskell_library",
    "haskell_toolchain_library",
)

haskell_toolchain_library(name = "base")

haskell_library(
    name = "transformers",
    srcs = glob([
        "Data/**/*.hs",
        "Control/**/*.hs",
    ]),
    version = "0",
    visibility = ["//visibility:public"],
    deps = [":base"],
)
