load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_library",
    "haskell_toolchain_library",
)

haskell_toolchain_library(name = "base")

haskell_library(
    name = "transformers",
    srcs = glob([
        "Data/**/*.hs",
        "Control/**/*.hs",
    ]),
    version = "0",
    visibility = ["//visibility:public"],
    deps = [":base"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
