load(
    "@io_tweag_rules_haskell//haskell:haskell.bzl",
    "haskell_cc_import",
    "haskell_import",
    "haskell_library",
)

haskell_import(name = "base")

haskell_import(name = "deepseq")

haskell_import(name = "ghc-prim")

haskell_import(name = "primitive")

haskell_import(name = "semigroups")

haskell_library(
    name = "vector",
    testonly = 1,
    srcs = glob(["Data/**/*.*hs"]),
    compiler_flags = [
        "-Ivector/include",
        "-Ivector/internal",
    ],
    extra_srcs = [
        "include/vector.h",
        "internal/unbox-tuple-instances",
    ],
    version = "0.0.0",  # This flags triggers the `MIN_VERSION` macro generation
    visibility = ["//visibility:public"],
    deps = [
        ":base",
        ":deepseq",
        ":ghc-prim",
        ":primitive",
        ":semigroups",
    ],
)
