load(
    "@io_tweag_rules_haskell//haskell:haskell.bzl",
    "haskell_cc_import",
    "haskell_library",
    "haskell_toolchain_library",
)

haskell_toolchain_library(name = "base")

haskell_toolchain_library(name = "deepseq")

haskell_toolchain_library(name = "ghc-prim")

haskell_toolchain_library(name = "primitive")

haskell_toolchain_library(name = "semigroups")

haskell_library(
    name = "vector",
    testonly = 1,
    srcs = glob(["Data/**/*.*hs"]),
    compiler_flags = [
        "-Iexternal/io_tweag_rules_haskell_examples/vector/include",
        "-Iexternal/io_tweag_rules_haskell_examples/vector/internal",
    ],
    extra_srcs = [
        "include/vector.h",
        "internal/unbox-tuple-instances",
    ],
    version = "0",
    visibility = ["//visibility:public"],
    deps = [
        ":base",
        ":deepseq",
        ":ghc-prim",
        "//primitive",
    ],
)
